--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "studenthousing-api",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "dotenv": "^16.4.5"
   }
 }
